--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <title>LLS Bracelets</title>
+     <title>About LLS</title>
      <link href="LLS.css" type="text/css" rel="stylesheet">
      <link rel="stylesheet" href="https://use.typekit.net/tic5fpp.css">
 
@@ -24,7 +24,6 @@
 
 </head>
 <body>
-
      <div id="Prices" class="about">$7 Regular<br>$10 Custom</div>
 
      <div id="grid_parent">
@@ -54,42 +53,21 @@
 
           <div id="Main">
 
-               <div id="Bracelet1" class="shared">
-                    <img src="Images/bracelets/Bracelet1.jpeg" alt="Bracelet"></a>
+               <div class="about">
+                    HELLO to everyone on the LLS website! LLS is a small business that hand-makes custom bracelets from lava stones by me, Willie! This is just the start to something big and it could not happen without your support. Thank you to the visitors and supporters of LLS!<br>– Willie Lackey IV<br><br>
+                    Designed & coded by Brenna Arnold.<br>
+                    Imagery by Willie Lackey IV.
                </div>
-               <br>
-               <div id="Bracelet2" class="shared">
-                    <img src="Images/bracelets/Bracelet2.jpeg" alt="Bracelet"></a>
-               </div>
-               <br>
-               <div id="Bracelet3" class="shared">
-                    <img src="Images/bracelets/Bracelet3.jpeg" alt="Bracelet"></a>
-               </div>
-               <br>
-               <div id="Bracelet4" class="shared">
-                    <img src="Images/bracelets/Bracelet4.jpeg" alt="Bracelet"></a>
-               </div>
-               <br>
-               <div id="Bracelet5" class="shared">
-                    <img src="Images/bracelets/Bracelet5.jpeg" alt="Bracelet"></a>
-               </div>
-               <br>
-               <div id="Bracelet6" class="shared">
-                    <img src="Images/bracelets/Bracelet6.jpeg" alt="Bracelet"></a>
-               </div>
-               <br>
-               <div id="Bracelet7" class="shared">
-                    <img src="Images/bracelets/Bracelet7.jpeg" alt="Bracelet"></a>
-               </div>
-               <br>
-               <div id="Bracelet8" class="shared">
-                    <img src="Images/bracelets/Bracelet8.jpeg" alt="Bracelet"></a>
-               </div>
-          </div>
 
-          <div class="footer">
-               <p><a href="mailto:will.lackey4@gmail.com?Subject=LLS Bracelets" target="_top">Email Willie to order your own bracelet!</a></p></div>
+               <div id="Willie1" class="shared">
+                    <img src="Images/Willie1.png" alt="Willie Lackey"></a>
+               </div>
+               <br>
+               <div id="Willie2" class="shared">
+                    <img src="Images/Willie2.png" alt="Willie Lackey"></a>
+               </div>
+               <div class="footer">
+                    <p><a href="mailto:will.lackey4@gmail.com?Subject=LLS Bracelets" target="_top">Email Willie to order your own bracelet!</a></p></div>
+               </body>
 
-          </body>
-
-          </html>
+               </html>
